fixed js so it prints function

--- a/Index.html
+++ b/Index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Coder Foundry MiniSite Template</title>
+    <title>FizzBuzz Challenge</title>
 
    
     <!-- Bootstrap core CSS -->
@@ -82,8 +82,8 @@
                 <input id="BuzzValue" />
             </div>
             <!--This is the button-->
-            <div class="col-3">
-                <button type="button" on-click="true" id="btnLetsFindOut" class="btn btn-primary btn-lg">Let's Find Out!</button>
+            <div class="col-lg-3 col-sm-3 mt-5">
+                <button type="button" id="btnLetsFindOut" class="btn btn-primary btn-lg">Let's Find Out!</button>
             </div>
         </div>
         <div class="row">
