--- a/Solve.html
+++ b/Solve.html
@@ -31,8 +31,8 @@
                             Home
                         </a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" href="/Solve.html">Solve</a>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="/Solve.html">Solve</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/Code.html">Code</a>
