--- a/Index.html
+++ b/Index.html
@@ -21,7 +21,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
         <div class="container">
-            <a class="navbar-brand" href="/Index.html">Challenge Name Here</a>
+            <a class="navbar-brand" href="/Index.html">FizzBuzz Challenge</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -39,13 +39,10 @@
                         <a class="nav-link" href="/Code.html">Code</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Git</a>
+                        <a class="nav-link" target="_blank" href="https://github.com/nwebb123/Fizz-Buzz-Challenge">Git</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Portfolio</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Blog Post/YouTube Explanation</a>
+                        <a class="nav-link" target="_blank" href="https://nickwebbportfolio.netlify.app/">Portfolio</a>
                     </li>
                 </ul>
             </div>
@@ -56,16 +53,14 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
-                <h1 class="mt-5">The Title of the Exercise</h1>
-                <p class="lead">You can customize the template colors</p>
+                <h1 class="mt-5">FizzBuzz Challenge</h1>
+                <p class="lead">The Traditional FizzBuzz Challenge is to write a program that prints the numbers one through one hundred (1-100). But for multiples of three, print "Fizz" instead of the number and for multiples of five print "Buzz". For numbers that are multiples of both three and five, print "FizzBuzz". The program below can check for multiples of three or five, or you can enter your own numbers to see different results</p>
                 <ul class="list-unstyled">
-                    <li>This page is for a description of the Javascript exercise</li>
-                    <li>You should include information about what the code does</li>
                 </ul>
             </div>
         </div>
     </div>
-
+    <hr />
     <!--Content-->
     <div class="container-fluid">
         <div class="row text-center">
@@ -73,22 +68,27 @@
                 <p>Entry 1: </p>
             </div>
             <div class="col-lg-2">
-                <input id="FizzValue" />
+                <input id="FizzValue" class="text-center" placeholder="Enter a number" />
             </div>
             <div class="col-lg-2">
                 <p>Entry 2: </p>
             </div>
             <div class="col-lg-2">
-                <input id="BuzzValue" />
+                <input id="BuzzValue" class="text-center" placeholder="Enter another number" />
             </div>
+            <hr />
             <!--This is the button-->
-            <div class="col-lg-3 col-sm-3 mt-5">
+            <div class="col-lg-3 col-sm-12 text-center">
                 <button type="button" id="btnLetsFindOut" class="btn btn-primary btn-lg">Let's Find Out!</button>
             </div>
         </div>
-        <div class="row">
-            <div class="col">
-                <p id="results"></p>
+        <hr />              <!--This adds a break in the page that looks good-->
+        
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 ">
+                    <p id="results"></p>
+                </div>
             </div>
         </div>
     </div>
