--- a/Solve.html
+++ b/Solve.html
@@ -20,7 +20,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
         <div class="container">
-            <a class="navbar-brand" href="/Index.html">Challenge Name Here</a>
+            <a class="navbar-brand" href="/Index.html">FizzBuzz Challenge</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -38,13 +38,10 @@
                         <a class="nav-link" href="/Code.html">Code</a>
                     </li>
                     <li class="nav-ite">
-                        <a class="nav-link" href="#">Git</a>
+                        <a class="nav-link" target="_blank" href="https://github.com/nwebb123/Fizz-Buzz-Challenge">Git</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Portfolio</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Blog Post/YouTube Explanation</a>
+                        <a class="nav-link" target="_blank" href="https://nickwebbportfolio.netlify.app/">Portfolio</a>
                     </li>
                 </ul>
             </div>
