--- a/Index.html
+++ b/Index.html
@@ -10,10 +10,14 @@
 
     <title>FizzBuzz Challenge</title>
 
-   
+    <link href="img/favicon.png" rel="icon">
+    <link href="img/favicon.png" rel="apple-touch-icon">
+
+
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
+    <link href="../Styles/styles.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -68,13 +72,13 @@
                 <p>Entry 1: </p>
             </div>
             <div class="col-lg-2">
-                <input id="FizzValue" class="text-center" placeholder="Enter a number" />
+                <input id="FizzValue" class="text-center" type="number" placeholder="Enter a number" />
             </div>
             <div class="col-lg-2">
                 <p>Entry 2: </p>
             </div>
             <div class="col-lg-2">
-                <input id="BuzzValue" class="text-center" placeholder="Enter another number" />
+                <input id="BuzzValue" class="text-center" type="number" placeholder="Enter another number" />
             </div>
             <hr />
             <!--This is the button-->
@@ -114,7 +118,7 @@
 
     <!--Custom Files-->
     <!--Link to my Javascript File-->
-    <script src="script.js"></script>
+    <script src="/Scripts/script.js"></script>
 
 
 
